<resources>
    <string name="app_name">Pixel Translator</string>
    <string name="ocr">OCR</string>
    <string name="camera_translate">Camera Translate</string>
    <string name="translate">Translate</string>
    <string name="multilingual">multilingual</string>
    <string name="done">Done</string>
    <string name="pixel">Pixel</string>
    <string name="welcome">welcome</string>
    <string name="english">English</string>
    <string name="enter_here">Enter Here……</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="translate_failed">translate failed，please try again</string>
    <string name="recognition_failed">Recognition Failed</string>

    <string name="search">Search</string>
    <string name="recently">Recently</string>
    <string name="all">All</string>
    <string name="delete_title">Delete language pack</string>
    <string name="delete_message">Whether to delete the language pack?</string>
    <string name="translating">Translating…</string>
    <string name="permission_title">Access Request</string>
    <string name="permission_message">This feature requires these permissions</string>
    <string name="copy">Copy</string>
    <string name="translation_failed">Translation failed</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="photo_taking_failed">Photo taking failed</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="text_not_recognized">Text not recognized</string>
    <string name="please_enter_the_translation_content">Please enter the translation content</string>
    <string name="do_you_want_to_try_again">Do you want to try again</string>

    <string name="fast_service">Fast Server</string>
    <string name="vpn">VPN</string>
    <string name="conncet_vpn_to_protect_internet_privacy">Conncet VPN to protect internet privacy</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="connecting_time">Connecting Time</string>
    <string name="no_permissions">No permission</string>
    <string name="servers">Servers</string>
    <string name="connected">Connected！</string>
    <string name="change_location">Change Location</string>
    <string name="disconnected">Disconnected!</string>
    <string name="protect_network_security">Protect Network Security</string>
    <string name="turn_vpn">Turn on vpn to Protect Privacy</string>
    <string name="connected_failed">Connection failed,please try again</string>
    <string name="vpn_connect">VPN Connect</string>
    <string name="vpn_disconnect">VPN Disconnect</string>
    <string name="cant_user_vpn">Due to policy reasons,this service is not available in your country</string>
</resources>